--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "packages:general:install": "cd general && npm i",
+    "packages:auth:install": "cd auth && npm i",
+    "packages:install": "concurrently \"npm run packages:general:install\" \"npm run packages:auth:install\"",
     "start:general:dev": "cd general && NODE_ENV=development nest start --watch",
     "start:auth:dev": "cd auth && NODE_ENV=development nest start --watch",
     "start:dev": "concurrently \"npm run start:general:dev\" \"npm run start:auth:dev\""
